fix: prevent clipping tooltips

--- a/src/components/CallControlBar/CallControlBar.module.css
+++ b/src/components/CallControlBar/CallControlBar.module.css
@@ -14,6 +14,9 @@
   background: var(--incall-controlbar-base-background, rgba(0, 0, 0, 0.7));
   backdrop-filter: blur(50px);
   position: relative;
+}
+
+.bar--clipping {
   overflow: hidden;
 }
 
